--- a/Housing_Price_Task.ipynb
+++ b/Housing_Price_Task.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Housing Price Task.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNyl06IZLlTuRQXnbkFMvYQ",
+      "authorship_tag": "ABX9TyNy5PL9MkHZhyxMyXYDTn/I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -386,6 +386,381 @@
           "execution_count": 4
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Prepare the dataset. \n",
+        "First, we identify which feature is irrelevant and drop it. The most irrelevant feature is the column Id."
+      ],
+      "metadata": {
+        "id": "e3NWqYRznorE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data.drop('Id', axis=1, inplace=True)"
+      ],
+      "metadata": {
+        "id": "JpuUJbernoPl"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data.head()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 300
+        },
+        "id": "s45wAT_yoCLd",
+        "outputId": "f1016a52-390d-4f4c-cf30-b24c96612b0f"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "   MSSubClass MSZoning  LotFrontage  LotArea Street LotShape LandContour  \\\n",
+              "0          60       RL         65.0     8450   Pave      Reg         Lvl   \n",
+              "1          20       RL         80.0     9600   Pave      Reg         Lvl   \n",
+              "2          60       RL         68.0    11250   Pave      IR1         Lvl   \n",
+              "3          70       RL         60.0     9550   Pave      IR1         Lvl   \n",
+              "4          60       RL         84.0    14260   Pave      IR1         Lvl   \n",
+              "\n",
+              "  Utilities LotConfig LandSlope  ... EnclosedPorch 3SsnPorch ScreenPorch  \\\n",
+              "0    AllPub    Inside       Gtl  ...             0         0           0   \n",
+              "1    AllPub       FR2       Gtl  ...             0         0           0   \n",
+              "2    AllPub    Inside       Gtl  ...             0         0           0   \n",
+              "3    AllPub    Corner       Gtl  ...           272         0           0   \n",
+              "4    AllPub       FR2       Gtl  ...             0         0           0   \n",
+              "\n",
+              "  PoolArea MiscVal  MoSold  YrSold  SaleType  SaleCondition SalePrice  \n",
+              "0        0       0       2    2008        WD         Normal    208500  \n",
+              "1        0       0       5    2007        WD         Normal    181500  \n",
+              "2        0       0       9    2008        WD         Normal    223500  \n",
+              "3        0       0       2    2006        WD        Abnorml    140000  \n",
+              "4        0       0      12    2008        WD         Normal    250000  \n",
+              "\n",
+              "[5 rows x 76 columns]"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-125e1cf7-8e77-4ba3-a7ea-b11a2f1d579a\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>MSSubClass</th>\n",
+              "      <th>MSZoning</th>\n",
+              "      <th>LotFrontage</th>\n",
+              "      <th>LotArea</th>\n",
+              "      <th>Street</th>\n",
+              "      <th>LotShape</th>\n",
+              "      <th>LandContour</th>\n",
+              "      <th>Utilities</th>\n",
+              "      <th>LotConfig</th>\n",
+              "      <th>LandSlope</th>\n",
+              "      <th>...</th>\n",
+              "      <th>EnclosedPorch</th>\n",
+              "      <th>3SsnPorch</th>\n",
+              "      <th>ScreenPorch</th>\n",
+              "      <th>PoolArea</th>\n",
+              "      <th>MiscVal</th>\n",
+              "      <th>MoSold</th>\n",
+              "      <th>YrSold</th>\n",
+              "      <th>SaleType</th>\n",
+              "      <th>SaleCondition</th>\n",
+              "      <th>SalePrice</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>60</td>\n",
+              "      <td>RL</td>\n",
+              "      <td>65.0</td>\n",
+              "      <td>8450</td>\n",
+              "      <td>Pave</td>\n",
+              "      <td>Reg</td>\n",
+              "      <td>Lvl</td>\n",
+              "      <td>AllPub</td>\n",
+              "      <td>Inside</td>\n",
+              "      <td>Gtl</td>\n",
+              "      <td>...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2008</td>\n",
+              "      <td>WD</td>\n",
+              "      <td>Normal</td>\n",
+              "      <td>208500</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>20</td>\n",
+              "      <td>RL</td>\n",
+              "      <td>80.0</td>\n",
+              "      <td>9600</td>\n",
+              "      <td>Pave</td>\n",
+              "      <td>Reg</td>\n",
+              "      <td>Lvl</td>\n",
+              "      <td>AllPub</td>\n",
+              "      <td>FR2</td>\n",
+              "      <td>Gtl</td>\n",
+              "      <td>...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>5</td>\n",
+              "      <td>2007</td>\n",
+              "      <td>WD</td>\n",
+              "      <td>Normal</td>\n",
+              "      <td>181500</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>60</td>\n",
+              "      <td>RL</td>\n",
+              "      <td>68.0</td>\n",
+              "      <td>11250</td>\n",
+              "      <td>Pave</td>\n",
+              "      <td>IR1</td>\n",
+              "      <td>Lvl</td>\n",
+              "      <td>AllPub</td>\n",
+              "      <td>Inside</td>\n",
+              "      <td>Gtl</td>\n",
+              "      <td>...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>9</td>\n",
+              "      <td>2008</td>\n",
+              "      <td>WD</td>\n",
+              "      <td>Normal</td>\n",
+              "      <td>223500</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>70</td>\n",
+              "      <td>RL</td>\n",
+              "      <td>60.0</td>\n",
+              "      <td>9550</td>\n",
+              "      <td>Pave</td>\n",
+              "      <td>IR1</td>\n",
+              "      <td>Lvl</td>\n",
+              "      <td>AllPub</td>\n",
+              "      <td>Corner</td>\n",
+              "      <td>Gtl</td>\n",
+              "      <td>...</td>\n",
+              "      <td>272</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2006</td>\n",
+              "      <td>WD</td>\n",
+              "      <td>Abnorml</td>\n",
+              "      <td>140000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>60</td>\n",
+              "      <td>RL</td>\n",
+              "      <td>84.0</td>\n",
+              "      <td>14260</td>\n",
+              "      <td>Pave</td>\n",
+              "      <td>IR1</td>\n",
+              "      <td>Lvl</td>\n",
+              "      <td>AllPub</td>\n",
+              "      <td>FR2</td>\n",
+              "      <td>Gtl</td>\n",
+              "      <td>...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>12</td>\n",
+              "      <td>2008</td>\n",
+              "      <td>WD</td>\n",
+              "      <td>Normal</td>\n",
+              "      <td>250000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>5 rows × 76 columns</p>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-125e1cf7-8e77-4ba3-a7ea-b11a2f1d579a')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-125e1cf7-8e77-4ba3-a7ea-b11a2f1d579a button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-125e1cf7-8e77-4ba3-a7ea-b11a2f1d579a');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "After dropping the Id column, check for the columns with missing data.\n",
+        "\n",
+        "isnull().sum() returns a total count of missing values for each column and datatype."
+      ],
+      "metadata": {
+        "id": "HZIFE2ZMoIO4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data.isnull().sum()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1_8MIWgTo5zJ",
+        "outputId": "84804390-68f1-4d13-f049-07da2b0761f6"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "MSSubClass         0\n",
+              "MSZoning           0\n",
+              "LotFrontage      259\n",
+              "LotArea            0\n",
+              "Street             0\n",
+              "                ... \n",
+              "MoSold             0\n",
+              "YrSold             0\n",
+              "SaleType           0\n",
+              "SaleCondition      0\n",
+              "SalePrice          0\n",
+              "Length: 76, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "Ol2H1FdYpmT8"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
