--- a/Housing_Price_Task.ipynb
+++ b/Housing_Price_Task.ipynb
@@ -1167,11 +1167,11 @@
         "len(initialFeatures)"
       ],
       "metadata": {
-        "id": "YtlnoYjYJMCY",
-        "outputId": "58ceee68-565f-476b-f733-178be688e72d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "YtlnoYjYJMCY",
+        "outputId": "58ceee68-565f-476b-f733-178be688e72d"
       },
       "execution_count": 20,
       "outputs": [
@@ -1204,11 +1204,11 @@
         "data.dtypes"
       ],
       "metadata": {
-        "id": "zQXvvjw-FCck",
-        "outputId": "6834a154-50ca-472d-ec14-0291d5ea1ae4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zQXvvjw-FCck",
+        "outputId": "6834a154-50ca-472d-ec14-0291d5ea1ae4"
       },
       "execution_count": 12,
       "outputs": [
@@ -1270,11 +1270,11 @@
         "categoricalFeatures"
       ],
       "metadata": {
-        "id": "LiwiQnCeG21n",
-        "outputId": "09d0d22b-d98a-46eb-c90c-6df824910b0f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LiwiQnCeG21n",
+        "outputId": "09d0d22b-d98a-46eb-c90c-6df824910b0f"
       },
       "execution_count": 18,
       "outputs": [
@@ -1348,12 +1348,12 @@
         "data[numericalData]"
       ],
       "metadata": {
-        "id": "W-zNGr3oJWb6",
-        "outputId": "dd100470-f148-4ae6-b681-b7b9f854d094",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 488
-        }
+        },
+        "id": "W-zNGr3oJWb6",
+        "outputId": "dd100470-f148-4ae6-b681-b7b9f854d094"
       },
       "execution_count": 22,
       "outputs": [
@@ -1911,12 +1911,12 @@
         "joinedData.head()"
       ],
       "metadata": {
-        "id": "WDqjoIdGK1R4",
-        "outputId": "e466de44-0a56-4f80-87cd-1e405622249b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 300
-        }
+        },
+        "id": "WDqjoIdGK1R4",
+        "outputId": "e466de44-0a56-4f80-87cd-1e405622249b"
       },
       "execution_count": 29,
       "outputs": [
@@ -2206,6 +2206,15 @@
           "execution_count": 29
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Standardize the Encoded Dataset."
+      ],
+      "metadata": {
+        "id": "tZc-UficLx-4"
+      }
     },
     {
       "cell_type": "code",
